# tmr-keyboard

./: .gitignore  RP2040_Minimal.kicad_sym  border.py  dumploc.py  pickle.py  place.py  placefp.py  remove_tracks.py  tmr-symbols.kicad_sym  tracks.py
RP2040_minimal.pretty/: C_0402_1005Metric.kicad_mod  C_0603_1608Metric.kicad_mod  Diodes_U_DFN1212_3_Handsolder.kicad_mod  Module_Conn_Regular2.kicad_mod
firmware/: .gitignore  CMakeLists.txt  prj.conf
firmware/boards/Girish/Girish_nRF52840/: Girish_nRF52840.dts  Girish_nRF52840.yaml  Kconfig.Girish_nRF52840  board.yml
firmware/boards/gp/tmr_kbd_nrf52840/: Kconfig.tmr_kbd_nrf52840  board.yml  tmr_kbd_nrf52840-pinctrl.dtsi  tmr_kbd_nrf52840.dts  tmr_kbd_nrf52840.yaml
firmware/src/: main.c  mux_adc.c
hardware/: .gitignore
notes/: analog  bypasscaps  calc.md  charging  cnc.md  components.md  fusion  is31fl3731  keyfrequency  keytravel  led.md  leds  loadsw  mcu  muxadc  nRF52840.md  notes  notes.md  nrf  nuts  parts  pulldown  scan  soldering  spi  swupdate
pcb/: LED.kicad_sch  fp-lib-table  pcb.kicad_pcb  pcb.kicad_prl  pcb.kicad_pro  pcb.kicad_sch  pcb.step  switch.kicad_sch  sym-lib-table  ~pcb.kicad_pcb.lck
plate/: plate.kicad_pcb  plate.kicad_pro  plate.kicad_sch
sw_prototype/: sw_prototype.kicad_prl  sw_prototype.kicad_pro  sw_prototype.kicad_sch  sym-lib-table
tmr-footprints/: C_0603_1608Metric.kicad_mod  C_0805_2012Metric.kicad_mod  C_1206_3216Metric.kicad_mod  Ezurio_BL54L15_Module.kicad_mod  JLC_Order_Num.kicad_mod  LED-6028.kicad_mod  LED_1206_THT.kicad_mod  Murata_DFE201210U.kicad_mod  (+21 more)
(+291 files in other folders)
